[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "r4s-archive"
version = "1.1.0"
description = "A lightweight, crash-safe single-file archive system with a low-cost obfuscation layer."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "t-ichi324" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
include = ["r4s*"]
